added resources directory with image added AutomationPracticeForm.java updated build.gradle with path to image

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,12 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    test {
+        resources.srcDir 'src/test/java/resources'
+    }
+}
+
 dependencies {
     testImplementation (
             "com.codeborne:selenide:6.19.1",
