--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ sourceSets {
 dependencies {
     testImplementation (
             "com.codeborne:selenide:6.19.1",
+            "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.9.3",
             "org.slf4j:slf4j-simple:2.0.7"
     )
