--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,20 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
+}
+
+allure {
+    report {
+        version.set("2.32.0")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.27.0")
+            }
+        }
+    }
 }
 
 repositories {
@@ -14,11 +29,14 @@ sourceSets {
 
 dependencies {
     testImplementation (
-            "com.codeborne:selenide:6.19.1",
-            "com.github.javafaker:javafaker:1.0.2",
-            "org.junit.jupiter:junit-jupiter:5.9.3",
-            "org.slf4j:slf4j-simple:2.0.7"
+            'com.codeborne:selenide:6.19.1',
+            'com.github.javafaker:javafaker:1.0.2',
+            'org.junit.jupiter:junit-jupiter:5.9.3',
+            'org.slf4j:slf4j-simple:2.0.7',
+            'io.qameta.allure:allure-selenide:2.27.0'
     )
+
+    runtimeOnly 'org.aspectj:aspectjweaver:1.9.22.1'
 }
 
 tasks.withType(JavaCompile) {
@@ -27,4 +45,5 @@ tasks.withType(JavaCompile) {
 
 test {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 }
