--- a/build.gradle
+++ b/build.gradle
@@ -47,16 +47,16 @@ tasks.withType(Test) {
     useJUnitPlatform()
     systemProperties(System.getProperties())
 
-    testLogging {
-        lifecycle {
-            events "started", "skipped", "failed", "standard_error", "standerd_out"
-            exceptionFormat "short"
-        }
-    }
-}
-
-task simple_test(type: Test) {
-    useJUnitPlatform {
-        includeTags("simple")
-    }
-}
+//    testLogging {
+//        lifecycle {
+//            events "started", "skipped", "failed", "standard_error", "standerd_out"
+//            exceptionFormat "short"
+//        }
+//    }
+//}
+//
+//task simple_test(type: Test) {
+//    useJUnitPlatform {
+//        includeTags("simple")
+//    }
+//}
