--- a/build.gradle
+++ b/build.gradle
@@ -60,3 +60,9 @@ tasks.withType(Test) {
 //        includeTags("simple")
 //    }
 //}
+
+task demoqa_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("demoqa")
+    }
+}
